[package]
name = "include-lines"
version = "1.0.0"
edition = "2021"
description = "Macros for reading in the lines of a file at compile time"
readme = "README.md"
repository = "https://github.com/hunterlawson/include-lines"
license = "MIT OR Apache-2.0"
keywords = ["include", "compile", "static", "file", "lines"]
categories = ["filesystem", "text-processing"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = "1.0.107"
