[package]
name = "include-lines-proc"
version = "1.1.0"
edition = "2021"
description = "Procedural macros for the include-lines crate. Please add that crate instead."
repository = "https://github.com/hunterlawson/include-lines"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = "1.0.107"
