[package]
name = "include-lines"
version = "1.1.0"
edition = "2021"
description = "Macros for reading in the lines of a file at compile time"
readme = "../README.md"
repository = "https://github.com/hunterlawson/include-lines"
license = "MIT OR Apache-2.0"
keywords = ["include", "compile", "static", "file", "lines"]
categories = ["filesystem", "text-processing"]

[dependencies]
include-lines-proc = "*"
